Fix overlaping text content at iOS Safari embedded view
Issue #1.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -169,6 +169,12 @@ body {
     justify-content: center;
 }
 
+@media (max-width: 767px) {
+    .center-section--content {
+        margin-top: 4em;
+    }
+}
+
 .submit {
     height: 58px;
     width: 220px;
